<resources>
    <string name="app_name">Apteki</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard
    </string>
    <string name="menu_branches">Filiallar</string>
    <string name="menu_products">Mahsulotlar</string>
    <string name="menu_toke">Token</string>
    <string name="nav_header_dev_title"><![CDATA[OOO <<DigitalCity>> 2021]]></string>
    <string name="example">Example</string>
    <string name="date_example">2021-01-01</string>
    <string name="date_example_two">2021-02-01</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adding_new_branch_name_hint">Dori apteki</string>
    <string name="adding_new_branch_name">Nomi</string>
    <string name="adding_new_branch_phone">Telefon raqam</string>
    <string name="adding_new_branch_phone_hint">12345678</string>
    <string name="adding_new_branch_address">Manzil</string>
    <string name="adding_new_branch_address_hint">Andijon shaxar</string>
    <string name="adding_new_branch_work_time">Ish vaqti</string>
    <string name="adding_new_branch_work_time_hint">08:00 dan 18:00</string>
    <string name="adding_new_branch_map_latitude">Xarita uzunlig va kenglik</string>
    <string name="adding_new_branch_map_latitude_hint"> </string>
    <string name="adding_new_branch_map_longitude">Xarita uzunlik</string>
    <string name="adding_new_branch_map_longitude_hint"> </string>
    <string name="adding_new_branch_region">Viloyat</string>
    <string name="adding_new_branch_type">Turi</string>
    <string name="adding_new_branch_delivery">Yetkazib berish xizmati</string>
    <string name="adding_new_branch_submit">Tasdiqlash</string>
    <string name="trade">Savdo</string>
    <string name="filter">Saralash</string>
    <string name="invoices">Fakturalar</string>
    <string name="employee">Hodimlar</string>
    <string name="login">Login</string>
    <string name="password">Parol</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Parol</string>
    <string name="login_enter">kirish</string>
    <string name="login_empty">"Login kiriting"</string>
    <string name="password_empty">"Parol kiriting"</string>
    <string name="both_empty">"Parol va Login kiriting"</string>
    <string name="cash_title">Naqd:</string>
    <string name="loan_title">Nasiya:</string>
    <string name="card_title">Plastik:</string>
    <string name="invoice_loan_title">Umumiy summa:</string>
    <string name="invoice_warehouse_title">Ombor:</string>
    <string name="see_the_trade">Savdoni ko\'rish</string>
    <string name="address">Manzil:</string>
    <string name="address_no_dots">Manzil</string>
    <string name="phone_number">Telefon:</string>
    <string name="phone_number_no_dots">Telefon raqaimi</string>
    <string name="employee_name">Ism, Familya</string>
    <string name="employee_user_name">Username</string>
    <string name="employee_parol">Parol</string>
    <string name="employee_type">Ish Turi</string>
    <string name="branch_name">Fillial nomi</string>
    <string name="branch_hint">Fillial 1</string>
    <string name="address_hint">Andidjon shaxar</string>
    <string name="phone_hint">12345678</string>
    <string name="fill_the_blank">Bo\'sh joylarni to\'ldiring</string>
    <string name="street_house">Shaxar, qocha, uy</string>
    <string name="get_location_error"><![CDATA[Xaritadagi manzilingizni aniqlay olmaymiz<]]></string>
    <string name="warning_enable_location">Avval joylashuvni yoqishingiz kerak</string>
    <string name="warning_enable_permission">Joylashuv ruxsatisiz bu funksiya to\'g\'ri ishlamaydi!</string>
    <string name="detecting_address">Manzil aniqlanmoqda..</string>
    <string name="address_detected">Manzil aniqlandi.</string>
    <string name="new_branch_added">Yangi filial qo\'shildi</string>
    <string name="new_employee_added">Yangi xodim qo\'shildi</string>
    <string name="som">so\'m</string>
    <string name="chose">Belgilash</string>
    <string-array name="type_array">
        <item>Sotuvchi</item>
        <item>Omborchi</item>

    </string-array>

</resources>