<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.branches.branchesInner.BranchesInnerFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tradeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_rounder"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/trade"
        android:textColor="@color/view_item_color"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/invoicesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_rounder"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/invoices"
        android:textColor="@color/view_item_color"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_rounder"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/employee"
        android:textColor="@color/view_item_color"
        android:textSize="18sp" />


</androidx.appcompat.widget.LinearLayoutCompat>