<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="24dp"
    tools:context=".ui.branches.branchesInner.employee.EmployeeAddFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/employeeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/employee_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/employeeNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/adding_new_branch_name_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/view_item_color"
                android:textColorHint="@color/view_item_color"
                android:textSize="@dimen/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employeeName" />

            <TextView
                android:id="@+id/employeeUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/employee_user_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employeeNameEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/employeeUserNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/employee_user_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/view_item_color"
                android:textColorHint="@color/view_item_color"
                android:textSize="@dimen/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employeeUserName" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/employee_parol"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/employeeUserNameEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/employee_parol"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/view_item_color"
                android:textColorHint="@color/view_item_color"
                android:textSize="@dimen/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />


            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/employee_type"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/typeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/employee_type"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/view_item_color"
                android:textColorHint="@color/view_item_color"
                android:textSize="@dimen/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type" />


            <TextView
                android:id="@+id/branchName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/branch_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/branchNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/branch_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/view_item_color"
                android:textColorHint="@color/view_item_color"
                android:textSize="@dimen/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/branchName" />

            <TextView
                android:id="@+id/branchAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/address_no_dots"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/branchNameEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/branchAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/address_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/view_item_color"
                android:textColorHint="@color/view_item_color"
                android:textSize="@dimen/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/branchAddress" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/phone_number_no_dots"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/branchAddressEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rounder"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/phone_hint"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/view_item_color"
                android:textColorHint="@color/view_item_color"
                android:textSize="@dimen/edit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

            <Button
                android:id="@+id/addingEmployeeSubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_rounder"
                android:text="@string/adding_new_branch_submit"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/toastText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bg_rounded_10"
        android:fontFamily="@font/montserrat_regular"
        android:padding="8dp"
        android:text="@string/example"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>